--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
   </head>
   <body>
       <script>
-        window.location.href = '/WebSudoku' + window.location.pathname.replace('/WebSudoku', '')
+        window.location.href = '/WebSudoku/#' + window.location.pathname.replace('/WebSudoku', '')
       </script>
     </body>
 </html>
