Update Blanker algorithm with a few retries.
Update input type based on user agent.

--- a/WebSudoku/Client/wwwroot/index.html
+++ b/WebSudoku/Client/wwwroot/index.html
@@ -30,6 +30,12 @@
             history.pushState({ page: 1 }, "Web Sudoku", '/WebSudoku' + path)
         }
     </script>
+    <script>
+        function isMobileDevice() {
+            // RegExp
+            return /android|webos|iphone|ipad|ipod|blackberry|iemobile|opera mini|mobile/i.test(navigator.userAgent);
+        }
+    </script>
 </body>
 
 </html>
