Move script from 404.html to a separate file.

--- a/WebSudoku/Client/404.html
+++ b/WebSudoku/Client/404.html
@@ -4,8 +4,6 @@
     <title></title>
   </head>
   <body>
-      <script>
-        window.location.href = '/WebSudoku/#' + window.location.pathname.replace('/WebSudoku', '')
-      </script>
+      <script src="redirect-from-error-through-hash.js"></script>
     </body>
 </html>
