--- a/WebSudoku/wwwroot/index.html
+++ b/WebSudoku/wwwroot/index.html
@@ -28,6 +28,13 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/sudoku-cell-focus.js"></script>
+    <script>
+        var indexOfHash = document.location.href.indexOf('#');
+        if (indexOfHash >= 0) {
+            var hash = document.location.href.substr(indexOfHash);
+            document.location.assign(document.location.href.replace(/[#]/, ''));
+        }
+    </script>
 </body>
 
 </html>
