--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         var indexOfHash = document.location.href.indexOf('#');
         if (indexOfHash >= 0) {
             var hash = document.location.href.substr(indexOfHash);
+            var destination = document.location.href.replace(hash, '');
+            destination = destination.substr(0, destination.lastIndexOf('/')) + hash.replace('#', '');
             document.location.assign(document.location.href.replace(/[#]/, ''));
         }
     </script>
