--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             var hash = document.location.href.substr(indexOfHash);
             var destination = document.location.href.replace(hash, '');
             destination = destination.substr(0, destination.lastIndexOf('/')) + hash.replace('#', '').replace(/\/*/g, '');
-            document.location.assign(document.location.href.replace(/[#]/, ''));
+            document.location.assign(destination);
         }
     </script>
 </body>
