--- a/WebSudoku/wwwroot/index.html
+++ b/WebSudoku/wwwroot/index.html
@@ -33,7 +33,7 @@
         if (indexOfHash >= 0) {
             var hash = document.location.href.substr(indexOfHash);
             var destination = document.location.href.replace(hash, '');
-            destination = destination + hash.replace('#', '').replace(/\/*/, '');
+            destination = destination + hash.replace('#', '').replace(/\/*/, '') + '/';
             document.location.assign(destination);
         }
     </script>
