--- a/WebSudoku/wwwroot/index.html
+++ b/WebSudoku/wwwroot/index.html
@@ -29,12 +29,14 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/sudoku-cell-focus.js"></script>
     <script>
-        var indexOfHash = document.location.href.indexOf('#');
-        if (indexOfHash >= 0) {
-            var hash = document.location.href.substr(indexOfHash);
-            var destination = document.location.href.replace(hash, '');
-            destination = destination + hash.replace('#', '').replace(/\/*/, '') + '/';
-            document.location.assign(destination);
+        onload = () => {
+            var indexOfHash = document.location.href.indexOf('#');
+            if (indexOfHash >= 0) {
+                var hash = document.location.href.substr(indexOfHash);
+                var destination = document.location.href.replace(hash, '');
+                destination = destination + hash.replace('#', '').replace(/\/*/, '');
+                document.location.assign(destination);
+            }
         }
     </script>
 </body>
