--- a/index.html
+++ b/index.html
@@ -29,16 +29,14 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/sudoku-cell-focus.js"></script>
     <script>
-        onload = async () => {
-            setTimeout(() => {
-                var indexOfHash = document.location.href.indexOf('#');
-                if (indexOfHash >= 0) {
-                    var hash = document.location.href.substr(indexOfHash);
-                    var destination = document.location.href.replace(hash, '');
-                    destination = destination + hash.replace('#', '').replace(/\/*/, '');
-                    document.location.replace(destination);
-                }
-            }, 1000);
+        function redirect() {
+            var indexOfHash = document.location.href.indexOf('#');
+            if (indexOfHash >= 0) {
+                var hash = document.location.href.substr(indexOfHash);
+                var destination = document.location.href.replace(hash, '');
+                destination = destination + hash.replace('#', '').replace(/\/*/, '');
+                document.location.replace(destination);
+            }
         }
     </script>
 </body>
