Fix blazor-error-ui text color

--- a/WebSudoku/wwwroot/index.html
+++ b/WebSudoku/wwwroot/index.html
@@ -21,7 +21,7 @@
         <div class="loading-progress-text"></div>
     </div>
 
-    <div id="blazor-error-ui" class="d-print-none">
+    <div id="blazor-error-ui" class="d-print-none text-black">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
