--- a/WebSudoku/wwwroot/index.html
+++ b/WebSudoku/wwwroot/index.html
@@ -15,8 +15,8 @@
 <body>
     <div id="app">
         <svg class="loading-progress">
-            <circle r="40%" cx="50%" cy="50%" />
-            <circle r="40%" cx="50%" cy="50%" />
+            <circle r="40%" cx="50%" cy="50%" stroke="#e0e0e0" />
+            <circle r="40%" cx="50%" cy="50%" stroke="#1b6ec2" />
         </svg>
         <div class="loading-progress-text"></div>
     </div>
